Add missing Web.config 'remove' line

--- a/sample/AspNetFullFrameworkSampleApp/Web.config
+++ b/sample/AspNetFullFrameworkSampleApp/Web.config
@@ -28,6 +28,7 @@
 	</system.web>
 	<system.webServer>
 		<modules>
+			<remove name="ElasticApmModule"/>
 			<add name="ElasticApmModule" type="Elastic.Apm.AspNetFullFramework.ElasticApmModule"/>
 			<remove name="TelemetryCorrelationHttpModule"/>
 			<add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="managedHandler"/>
