Mutlitargeting tests - additional test project and sample app signing (#659)
* Add targetframework netcoreapp3.1

* Remove AddMvc().SetCompatibilityVersion

And fix WebApiSample.csproj to also target 3.1

* Update Elastic.Apm.AspNetCore.csproj

Remove targetframework netcoreapp2.2 - it's not needed.

* Update WebApiSample.csproj

Get rid of warning - `netcoreapp3.1` does not need `Microsoft.AspNetCore.App`

* Sign sample pacakges with specific snk and multitarget for more tests

Sample apps needs to be signed (becuase they are referenced in test projects), but if we reuse the elasticapm.snk, service name detection does not work, since the sample app would be detected as an agent package - which it is not. So we sign with a different key.

* csproj formatting

--- a/sample/WebApiSample/WebApiSample.csproj
+++ b/sample/WebApiSample/WebApiSample.csproj
@@ -2,11 +2,10 @@
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp2.1;netcoreapp2.2;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
-    <SignAssembly>false</SignAssembly>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' != 'netcoreapp3.0' ">
+  <ItemGroup Condition=" '$(TargetFramework)' != 'netcoreapp3.0' AND '$(TargetFramework)' != 'netcoreapp3.1' ">
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
